// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`org/org-to-hast blockquote 1`] = `
<div>
<blockquote>
  <p>hello, world!</p>
</blockquote>
</div>
`;

exports[`org/org-to-hast emphasis 1`] = `
<div>
<p>
  <emph>Consider</emph> <code class="inline-code">t*h*e</code> <strong>following</strong> <code class="inline-verbatim">example</code> <del>strike</del> <span style="text-decoration: underline;">under</span>
</p>
</div>
`;

exports[`org/org-to-hast empty 1`] = `<div></div>`;

exports[`org/org-to-hast headline 1`] = `
<div>
<h1>hi</h1>
</div>
`;

exports[`org/org-to-hast headline with sections 1`] = `
<div>
<p>hello</p>
<h1>hi</h1>
<p>section</p>
<h2>hello</h2>
<p>another section</p>
</div>
`;

exports[`org/org-to-hast keywords 1`] = `<div></div>`;

exports[`org/org-to-hast link 1`] = `
<div>
<p><a href="https://example.com">https://example.com</a></p>
</div>
`;

exports[`org/org-to-hast link mixed with text 1`] = `
<div>
<p>hello <a href="http://example.com">http://example.com</a> blah</p>
</div>
`;

exports[`org/org-to-hast list 1`] = `
<div>
<ul>
  <li>
    <p>hello</p>
  </li>
</ul>
</div>
`;

exports[`org/org-to-hast multiple headlines 1`] = `
<div>
<h1>hi</h1>
<h2>there</h2>
<h1>hello</h1>
<h3>world</h3>
</div>
`;

exports[`org/org-to-hast nested list 1`] = `
<div>
<ul>
  <li>
    <p>hello</p>
    <ul>
      <li>
        <p>world</p>
      </li>
      <li>
        <p>blah</p>
      </li>
    </ul>
  </li>
  <li>
    <p>hi</p>
  </li>
</ul>
</div>
`;

exports[`org/org-to-hast paragraph 1`] = `
<div>
<p>hello</p>
</div>
`;

exports[`org/org-to-hast special block 1`] = `
<div>
<div>
  <p>hello</p>
</div>
</div>
`;

exports[`org/org-to-hast src block 1`] = `
<div>
<pre><code>a = b;
printf("%d\\n", *a);
</code></pre>
</div>
`;
